# schedule_reader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/schedule_reader/: __init__.py  compdat.py  counter.py  data_reader.py  dates.py  dates_tstep.py  extract_keyword.py  gcon.py  helpers.py  property_keywords.py  schedule_keywords.py  time_parser.py  wcon.py  welspec.py  wlist.py
